# delivery-env

Downloads/delivery-env/: Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt
Downloads/delivery-env/env/: __init__.py  delivery_env.py
Downloads/delivery-env/graders/: easy_grader.py  hard_grader.py  medium_grader.py
Downloads/delivery-env/tasks/: easy.py  hard.py  medium.py
delivery-env/: .dockerignore  .gitignore
delivery-env/server/: app.py
