[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "delivery-env"
version = "0.1.0"
description = "Delivery Environment for Meta PyTorch Hackathon"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "gymnasium>=0.29.1",
    "numpy>=1.26.0",
]

[project.scripts]
server = "app:main"

[tool.setuptools.packages.find]
include = ["*"]
